# AMS-HAN-Gateway

./: .gitignore  LICENSE  PROJECT_OVERVIEW.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  rxconfig.py
.github/workflows/: firmware-build.yml  python-checks.yml
ams_han_reflex_app/: ams_han_reflex_app.py  app_context.py  app_meta.py  components.py  service.py  state.py
ams_han_reflex_app/backend/: models.py  protocol.py  serial_worker.py  storage.py
ams_han_reflex_app/domain/: analysis.py  event_engine.py  frame_parser.py  mains.py  pricing.py  signatures.py
ams_han_reflex_app/services/: __init__.py  analysis_service.py  connection_service.py  cost_service.py  history_service.py  replay_service.py  runtime_service.py  settings_service.py
ams_han_reflex_app/state_parts/: __init__.py  analysis.py  common.py  connection.py  cost.py  derived.py  diagnostics.py  history.py  replay.py  tabs.py
docs/: ARCHITECTURE_BOUNDARIES.md
firmware/esp_idf_ams_han_gateway_wroom32d/main/: CMakeLists.txt  app_config.h  app_main.c  app_mqtt.c  app_mqtt.h  config_store.c  config_store.h  han_reader.c  han_reader.h  provisioning_stub.c  provisioning_stub.h  serial_link.c  serial_link.h  telemetry.c  telemetry.h  wifi_manager.c  wifi_manager.h
fixtures/: README.md
scripts/: run_checks.py  run_dashboard.py
tests/: __init__.py  test_analysis.py  test_end_to_end_replay.py  test_firmware_contract.py  test_pricing.py  test_protocol.py  test_replay_player.py  test_runtime_service.py  test_service.py  test_signatures.py  test_state.py
(+7 files in other folders)
